# fastapi-microservice-bird-species-classification

./: .env  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md
.devcontainer/: devcontainer.json
src/: .env  main.py  manage.py  pyproject.toml  requirements.txt
src/clients/api/health/: health.py
src/clients/api/model/: model.py
src/clients/schemas/: base.py
src/clients/schemas/health/: health.py
src/clients/schemas/model/: model.py
src/dependencies/get_current_username/: get_current_username.py
src/dependencies/get_model_service/: get_model_service.py
src/events/: lifespan.py
src/exceptions/: http_exception_handler.py
src/routers/: base_http_router.py
src/routers/health/: health.py
src/routers/models/: models.py
src/services/model/: model.py
src/settings/: config.py
src/settings/environments/: base.py  devl.py  prod.py  stage.py  test.py
src/settings/logging/: intercept_handler.py
src/settings/types/: app_env.py
src/tests/: conftest.py
src/tests/health/feature/: test_feature_health_fail.py  test_feature_health_pass.py
src/tests/model/feature/: test_feature_model_fail.py  test_feature_model_pass.py
